Have fixed function call function issue

--- a/index.html
+++ b/index.html
@@ -48,20 +48,28 @@
             </div>
         </div>
 
-        <div class="col-md-4 center">
+        <div class="col-md-4">
 
-            <div class="question">
-                <h3>Who's call is this?</h3>
-            </div>
+            <div class="center-section">
 
-            <div class="audio">
-                <audio controls id="bird-sound">
-                    <source src="" type="audio/mpeg">
-                </audio>
-            </div>
+                <div class="question">
+                    <h3>What bird's call is this?</h3>
+                </div>
 
-            <div class="submit-button " id="submit-button" style="margin-top: 10px">
-                <button class="btn" id="check-answer">Check answer</button>
+                <div class="audio">
+                    <audio controls id="bird-sound">
+                        <source src="" type="audio/mpeg">
+                    </audio>
+                </div>
+
+                <div class="submit-button " id="submit-button">
+                    <button class="btn" id="check-answer">Check answer</button>
+                </div>
+
+                <div class="replay-button" id="replay-button">
+                    <button class="btn" id="play-again">Play again</button>
+                </div>
+
             </div>
 
         </div>
@@ -80,10 +88,6 @@
 
             <div class="answer-display" id="answer-display">
                 <p id="answer-text"></p>
-            </div>
-
-            <div class="replay-button" id="replay-button">
-                <button class="btn" id="play-again">Play again</button>
             </div>
 
         </div>
