progress bar updating

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                     <button class="btn" id="check-answer">Check answer</button>
                 </div>
 
+                <div class="progress">
+                    <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+
+                    </div>
+                </div>
+
                 <div class="replay-button" id="replay-button">
                     <button class="btn" id="play-again">Play again</button>
                 </div>
