--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     </div>
 
     <div class="row">
+        <div class="col-md">
+            <div class="question">
+                <h3>What bird's call is this?</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="row align-items-center">
 
         <div class="col-md-4">
             <div class="answer-form">
@@ -52,10 +60,6 @@
 
             <div class="center-section">
 
-                <div class="question">
-                    <h3>What bird's call is this?</h3>
-                </div>
-
                 <div class="audio">
                     <audio controls id="bird-sound">
                         <source src="" type="audio/mpeg">
@@ -64,12 +68,6 @@
 
                 <div class="submit-button " id="submit-button">
                     <button class="btn" id="check-answer">Check answer</button>
-                </div>
-
-                <div class="progress">
-                    <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
-
-                    </div>
                 </div>
 
                 <div class="replay-button" id="replay-button">
@@ -92,8 +90,22 @@
 
         <div class="col-md">
 
+            <div class="progress">
+                <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+
+                </div>
+            </div>
+
             <div class="answer-display" id="answer-display">
                 <p id="answer-text"></p>
+            </div>
+
+            <div class="carousel-item">
+                <img src="..." alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>...</h5>
+                    <p>...</p>
+                </div>
             </div>
 
         </div>
