--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md">
+        <div class="col-sm">
             <div class="question">
                 <h3>What bird's call is this?</h3>
             </div>
@@ -33,7 +33,7 @@
 
     <div class="row align-items-center">
 
-        <div class="col-md-4">
+        <div class="col-sm-4">
             <div class="answer-form">
                 <form class="answer-options" >
                     <div class="form-check">
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-sm-4">
 
             <div class="center-section">
 
@@ -74,11 +74,21 @@
                     <button class="btn" id="play-again">Play again</button>
                 </div>
 
+                <div class="progress">
+                    <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+
+                    </div>
+                </div>
+
+                <div class="answer-display" id="answer-display">
+                    <p id="answer-text"></p>
+                </div>
+
             </div>
 
         </div>
 
-        <div class="col-md-4">
+        <div class="col-sm-4">
 
             <img id="image-match" class="image-match img-fluid">
 
@@ -88,17 +98,7 @@
 
     <div class="row">
 
-        <div class="col-md">
-
-            <div class="progress">
-                <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
-
-                </div>
-            </div>
-
-            <div class="answer-display" id="answer-display">
-                <p id="answer-text"></p>
-            </div>
+        <div class="col-sm">
 
             <div class="carousel-item">
                 <img src="..." alt="...">
