--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="col-sm-4">
 
-            <div class="center-section">
+            <div id="control-section">
 
                 <div class="audio">
                     <audio controls id="bird-sound">
@@ -74,12 +74,6 @@
                     <button class="btn" id="play-again">Play again</button>
                 </div>
 
-                <div class="progress">
-                    <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
-
-                    </div>
-                </div>
-
                 <div class="answer-display" id="answer-display">
                     <p id="answer-text"></p>
                 </div>
@@ -91,6 +85,35 @@
         <div class="col-sm-4">
 
             <img id="image-match" class="image-match img-fluid">
+
+            <!--
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="..." alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="..." alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="..." alt="Third slide">
+                    </div>
+                </div>
+            </div>
+            -->
+
+        </div>
+
+    </div>
+
+    <div class="row align-items-center">
+
+        <div class="col-sm-12">
+
+            <div class="progress">
+                <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+                </div>
+            </div>
 
         </div>
 
