--- a/test-layout.html
+++ b/test-layout.html
@@ -98,7 +98,7 @@
 
     <div class="row">
 
-        <div class="col-sm-12">
+        <div class="col-sm-6 col-md-12">
 
             <div class="progress">
                     <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="25">
