--- a/Old/indexOld.html
+++ b/Old/indexOld.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="layout-test.css">
-    <script src="birds.js"></script>
-    <script async defer src="birdGameLayoutTest.js"></script>
+    <link rel="stylesheet" href="birdsOld.css">
+    <script src="../birds.js"></script>
+    <script async defer src="birdGameOld.js"></script>
 
 </head>
 <body>
@@ -23,20 +23,17 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-sm">
+            <div class="question">
+                <h3>What bird's call is this?</h3>
+            </div>
+        </div>
+    </div>
+
     <div class="row align-items-center">
 
-        <div class="col-sm-6">
-
-            <div class="question">
-                <h2>What bird's call is this?</h2>
-            </div>
-
-            <div class="audio">
-                <audio controls id="bird-sound">
-                    <source src="" type="audio/mpeg">
-                </audio>
-            </div>
-
+        <div class="col-sm-4">
             <div class="answer-form">
                 <form class="answer-options" >
                     <div class="form-check">
@@ -57,8 +54,17 @@
                     </div>
                 </form>
             </div>
+        </div>
+
+        <div class="col-sm-4">
 
             <div id="control-section">
+
+                <div class="audio">
+                    <audio controls id="bird-sound">
+                        <source src="" type="audio/mpeg">
+                    </audio>
+                </div>
 
                 <div class="submit-button " id="submit-button">
                     <button class="btn" id="check-answer">Check answer</button>
@@ -68,11 +74,15 @@
                     <button class="btn" id="play-again">Play again</button>
                 </div>
 
+                <div class="answer-display" id="answer-display">
+                    <p id="answer-text"></p>
+                </div>
+
             </div>
 
         </div>
 
-        <div class="col-sm-6">
+        <div class="col-sm-4">
 
             <img id="image-match" class="image-match img-fluid">
 
@@ -96,17 +106,13 @@
 
     </div>
 
-    <div class="row">
+    <div class="row align-items-center">
 
-        <div class="col-sm-6 col-md-12">
+        <div class="col-sm-12">
 
             <div class="progress">
-                    <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="25">
-                    </div>
+                <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
                 </div>
-
-            <div class="answer-display" id="answer-display">
-                <h4 id="answer-text"></h4>
             </div>
 
         </div>
