Fixed previous answer error + loops for buttons + beginnings of play by location

--- a/index.html
+++ b/index.html
@@ -107,7 +107,29 @@
             <div class="progress">
                     <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="25">
                     </div>
-                </div>
+            </div>
+
+            <div class="location-selection" id="location-selection">
+                <h5 class="location-selection" id="location-selection-text"></h5>
+                <h5 class="location-selection" id="change-location-text">Click below to change.</h5>
+            </div>
+
+            <div class="answer-form">
+                <form class="location-form" >
+                    <div class="form-check">
+                        <input name="location" id="world" class="form-check-input" type="radio" checked>
+                        <label for="world" class="btn btn-secondary" id="world-label">Everywhere</label>
+                    </div>
+                    <div class="form-check">
+                        <input name="location" id="united-states" class="form-check-input" type="radio">
+                        <label for="united-states" class="btn btn-secondary" id="united-states-label">North America</label>
+                    </div>
+                    <div class="form-check">
+                        <input name="location" id="minnesota" class="form-check-input" type="radio">
+                        <label for="minnesota" class="btn btn-secondary" id="minnesota-label">Minnesota</label>
+                    </div>
+                </form>
+            </div>
 
         </div>
 
