--- a/index.html
+++ b/index.html
@@ -73,24 +73,16 @@
         </div>
 
         <div class="col-sm-6">
-
-            <img id="image-match" class="image-match img-fluid">
-
-            <!--
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="..." alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Third slide">
+                        <img id="image-match" class="image-match img-fluid">
+                        <div class="carousel-caption">
+                            <p id="carousel-caption"></p>
+                        </div>
                     </div>
                 </div>
             </div>
-            -->
 
         </div>
 
@@ -110,15 +102,14 @@
             </div>
 
             <div class="location-selection" id="location-selection">
-                <h5 class="location-selection" id="location-selection-text"></h5>
-                <h5 class="location-selection" id="change-location-text">Click below to change.</h5>
+                <h5 class="location-selection" id="location-selection-text">Hearing birds from:</h5>
             </div>
 
             <div class="answer-form">
                 <form class="location-form" >
                     <div class="form-check">
-                        <input name="location" id="world" class="form-check-input" type="radio" checked>
-                        <label for="world" class="btn btn-secondary" id="world-label">Everywhere</label>
+                        <input name="location" id="world" class="form-check-input" type="radio">
+                        <label for="world" class="btn btn-secondary" id="world-label">World</label>
                     </div>
                     <div class="form-check">
                         <input name="location" id="united-states" class="form-check-input" type="radio">
