--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="col-md">
             <div class="jumbotron">
                 <h2>Birdified</h2>
-                <img src="favicon.ico.jpg" height="50px">
+                <img src="/BirdifiedGenius/images/logo.jpg" alt="logo" class="logo" id="logo">
                 <h2>Genius</h2>
             </div>
         </div>
@@ -75,15 +75,8 @@
         </div>
 
         <div class="col-sm-6">
-            <div id="answer-carousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner" id="carousel-inner">
-                    <div class="carousel-item active">
-                        <img id="image-match" class="image-match img-fluid">
-                        <div class="carousel-caption">
-                            <p id="carousel-caption"></p>
-                        </div>
-                    </div>
-                </div>
+            <div class="img-container">
+                <img id="image-match" class="image-match img-fluid">
             </div>
 
         </div>
